[project]
name = "yama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "matplotlib>=3.9.2",
    "polars>=1.14.0",
    "pyarrow>=18.0.0",
    "ruff>=0.8.0",
    "yfinance>=0.2.50",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
